src/vm/snapshots/hebi__vm__tests__call_fn_with_args.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
fn test(v):
  return v

test(100)


# Result:
Ok(
    Int(
        100,
    ),
)
