src/vm/snapshots/hebi__vm__tests__class_derived_with_init_and_no_call_parent_init.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  init(self):
    print("T.init")
class U(T):
  init(self):
    print("U.init")
_ := U()


# Result:
None

# Output:
U.init

