src/vm/snapshots/hebi__vm__tests__class_derived_with_parent_init.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  init(self):
    print("T.init")
class U(T):
  pass
_ := U()


# Result:
None

# Output:
T.init

