src/vm/snapshots/hebi__vm__tests__class_derived_with_parent_method.snap
---
source: src/vm/tests.rs
expression: snapshot
---
Ok(
    Object(
        ClassType {
            name: "U",
            init: None,
            fields: {},
            methods: {},
            parent: Some(
                ClassType {
                    name: "T",
                    init: None,
                    fields: {},
                    methods: {
                        "test": Function {
                            descriptor: FunctionDescriptor {
                                name: "test",
                                params: Params {
                                    has_self: true,
                                    min: 0,
                                    max: 0,
                                },
                                upvalues: RefCell {
                                    value: [],
                                },
                                frame_size: 1,
                                instructions: 2,
                                constants: 0,
                            },
                            upvalues: [],
                            module_id: ModuleId(
                                None,
                            ),
                        },
                    },
                    parent: None,
                },
            ),
        },
    ),
)
