src/vm/snapshots/hebi__vm__tests__class_with_init_conditional_false.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  fn init(self, v, set):
    if set:
      self.v = v
?T(10, false).v


# Result:
Ok(
    None,
)
