src/vm/snapshots/hebi__vm__tests__class_with_init_conditional_true.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  v = none
  init(self, v, set):
    if set:
      self.v = v
?T(10, true).v


# Result:
Int(
    10,
)
